--- a/.github/workflows/preDeploy.yml
+++ b/.github/workflows/preDeploy.yml
@@ -98,6 +98,7 @@ jobs:
           GPG_PASSPHRASE: ${{ secrets.LARGE_SECRET_PASSPHRASE }}
 
       - name: Update staging branch from main
+        if: ${{ !fromJSON(needs.chooseDeployActions.outputs.SHOULD_CP) }}
         run: |
           # Get the staging branch locally
           git switch staging
