--- a/.github/workflows/cherryPick.yml
+++ b/.github/workflows/cherryPick.yml
@@ -75,8 +75,13 @@ jobs:
 
       - name: Cherry-pick the version-bump to staging
         run: |
-          git fetch main
-          git cherry-pick -S -x --mainline 1 --strategy=recursive -Xtheirs ${{ steps.getVersionBumpMergeCommit.outputs.MERGE_COMMIT_SHA }}
+          # Find the commit for the version-bump
+          git switch main
+          VERSION_BUMP_COMMIT="$(git log --format='%H' --author='OSBotify' --grep 'Update version to ${{ env.NEW_VERSION }}')"
+
+          # Cherry-pick it to staging
+          git switch staging
+          git cherry-pick -S -x --mainline 1 --strategy=recursive -Xtheirs "$VERSION_BUMP_COMMIT"
 
       - name: Cherry-pick the merge commit of target PR
         id: cherryPick
