--- a/.github/workflows/preDeploy.yml
+++ b/.github/workflows/preDeploy.yml
@@ -100,13 +100,7 @@ jobs:
       - name: Update staging branch from main
         if: ${{ !fromJSON(needs.chooseDeployActions.outputs.SHOULD_CP) }}
         run: |
-          # Get the staging branch locally
-          git fetch staging
-          git switch staging
-
-          # Delete the staging branch and re-create it from main
-          git switch main
-          git branch -D staging
+          # Re-create the staging branch from main
           git switch -c staging
 
           # Force-update the remote staging branch
