--- a/.github/workflows/cherryPick.yml
+++ b/.github/workflows/cherryPick.yml
@@ -101,7 +101,7 @@ jobs:
           fi
 
       - name: Create Pull Request to manually finish CP
-        if: fromJSON(steps.cherryPick.outputs.hasConflicts)
+        if: steps.cherryPick.outputs.hasConflicts == 'true'
         id: createPullRequest
         run: |
           gh pr create \
