--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,9 +58,9 @@ project.ext.envConfigFiles = [
     productionDebug: ".env.production",
     productionRelease: ".env.production",
     adhocRelease: ".env.staging",
-    adhocDebug: ".env.staging",
     developmentRelease: ".env",
     developmentDebug: ".env"
+    e2eRelease: ".env"
 ]
 
 /**
@@ -229,7 +229,7 @@ dependencies {
     // Fixes a version conflict between airship and react-native-plaid-link-sdk
     // This may be fixed by a newer version of the plaid SDK (not working as of 10.0.0)
     implementation "androidx.work:work-runtime-ktx:2.8.0"
-    
+
     // This okhttp3 dependency prevents the app from crashing - See https://github.com/plaid/react-native-plaid-link-sdk/issues/74#issuecomment-648435002
     implementation "com.squareup.okhttp3:okhttp-urlconnection:4.+"
 
