--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "prettier-watch": "onchange \"**/*.js\" -- prettier --write --ignore-unknown {{changed}}",
     "print-version": "echo $npm_package_version",
     "storybook": "start-storybook -p 6006",
-    "storybook-build": "build-storybook -o dist/docs",
+    "storybook-build": "ENV=production build-storybook -o dist/docs",
+    "storybook-build-staging": "ENV=staging build-storybook -o dist/docs",
     "gh-actions-build": "./.github/scripts/buildActions.sh",
     "gh-actions-validate": "./.github/scripts/validateActionsAndWorkflows.sh",
     "analyze-packages": "ANALYZE_BUNDLE=true webpack --config config/webpack/webpack.common.js --env envFile=.env.production",
