--- a/.github/workflows/cherryPick.yml
+++ b/.github/workflows/cherryPick.yml
@@ -71,7 +71,8 @@ jobs:
       - name: Cherry-pick the version-bump to staging
         run: |
           # Find the commit for the version-bump
-          git fetch origin main
+          # This command fetches commits in the last hour on the main branch
+          git fetch origin main --no-tags --shallow-since="$(( $(date -%s) - 3600 ))"
           git switch main
           VERSION_BUMP_COMMIT="$(git log --format='%H' --author='OSBotify' --grep 'Update version to ${{ env.NEW_VERSION }}')"
 
