Try with former lint version because new one seem to bug
Signed-off-by: Pierre Michel <pmiche04@gmail.com>

--- a/.github/actionlint.yaml
+++ b/.github/actionlint.yaml
@@ -1,5 +1,5 @@
 # See https://github.com/rhysd/actionlint/blob/main/docs/config.md
 self-hosted-runner:
   labels:
-    - ubuntu-latest-xl
+    - ubuntu-20.04-64core
     - macos-12-xl
