--- a/package.json
+++ b/package.json
@@ -212,6 +212,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.5.13",
+    "eslint-plugin-you-dont-need-lodash-underscore": "^6.12.0",
     "flipper-plugin-bridgespy-client": "^0.1.9",
     "html-webpack-plugin": "^5.5.0",
     "jest": "29.4.1",
