--- a/.github/workflows/cherryPick.yml
+++ b/.github/workflows/cherryPick.yml
@@ -6,10 +6,6 @@ on:
       PULL_REQUEST_NUMBER:
         description: The number of a pull request to CP
         required: true
-      NEW_VERSION:
-        description: The new app version (leave empty if running manually)
-        required: false
-        default: ''
 
 jobs:
   validateActor:
@@ -29,13 +25,12 @@ jobs:
 
   createNewVersion:
     needs: validateActor
-    if: ${{ fromJSON(needs.validateActor.outputs.IS_DEPLOYER) && github.event.inputs.NEW_VERSION == '' }}
+    if: ${{ fromJSON(needs.validateActor.outputs.IS_DEPLOYER) }}
     uses: Expensify/App/.github/workflows/createNewVersion.yml@main
     secrets: inherit
 
   cherryPick:
-    needs: [validateActor, createNewVersion]
-    if: ${{ always() && fromJSON(needs.validateActor.outputs.IS_DEPLOYER) }}
+    needs: createNewVersion
     runs-on: ubuntu-latest
     steps:
       - name: Checkout staging branch
@@ -56,25 +51,13 @@ jobs:
           USER: ${{ github.actor }}
           PULL_REQUEST_NUMBER: ${{ github.event.inputs.PULL_REQUEST_NUMBER }}
 
-      - name: Save correct NEW_VERSION to env
-        env:
-          NEW_VERSION: ${{ github.event.inputs.NEW_VERSION }}
-        run: |
-          if [ -z "$NEW_VERSION" ]; then
-            echo "NEW_VERSION=${{ needs.createNewVersion.outputs.NEW_VERSION }}" >> "$GITHUB_ENV"
-            echo "New version is ${{ env.NEW_VERSION }}"
-          else
-            echo "NEW_VERSION=${{ github.event.inputs.NEW_VERSION }}" >> "$GITHUB_ENV"
-            echo "New version is ${{ env.NEW_VERSION }}"
-          fi;
-
       - name: Cherry-pick the version-bump to staging
         run: |
           # Find the commit for the version-bump
           # This command fetches commits in the last hour on the main branch
           git fetch origin main --no-tags --shallow-since="$(( $(date -%s) - 3600 ))"
           git switch main
-          VERSION_BUMP_COMMIT="$(git log --format='%H' --author='OSBotify' --grep 'Update version to ${{ env.NEW_VERSION }}')"
+          VERSION_BUMP_COMMIT="$(git log --format='%H' --author='OSBotify' --grep 'Update version to ${{ needs.createNewVersion.outputs.NEW_VERSION }}')"
 
           # Cherry-pick it to staging
           git switch staging
