--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,10 @@ jobs:
   deployProduction:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/production'
-
     steps:
       - uses: actions/checkout@v3
         with:
+          ref: production
           token: ${{ secrets.OS_BOTIFY_TOKEN }}
 
       - uses: Expensify/App/.github/actions/composite/setupGitForOSBotify@main
