--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.31",
     "onfido-sdk-ui": "12.4.0",
+    "patch-package": "^8.0.0-canary.2",
     "process": "^0.11.10",
     "prop-types": "^15.7.2",
     "pusher-js": "7.4.0",
